# typsio

./: .gitignore  README.md  plan.md
examples/backend/: pyproject.toml
examples/frontend/: package-lock.json  package.json
examples/frontend/src/: api.ts  main.ts
examples/hello_world/: index.html  package.json  pyproject.toml  typsio.config.py  vite.config.js
examples/hello_world/my_app/: api_defs.py  server.py
examples/hello_world/web/: api.ts  main.ts
generator/: typsio_gen.py
scripts/: README.md  publish.ps1  publish.sh
