[project]
name = "typsio-example-backend"
version = "0.1.0"
dependencies = [
    "uvicorn",
    "typsio @ {root:uri}/../../packages/py_typsio" # 本地路径依赖
]

[tool.uv.scripts]
dev = "uvicorn my_app.server:app --reload --reload-dir src"
gen-types = "python ../../../generator/typsio_gen.py src/my_app/api_defs.py rpc_registry --s2c-events-name SERVER_EVENTS -o ../frontend/src/generated/api-types.ts"
